@@ -2085,18 +2085,30 @@ repository's source type.  This type is normally set at
 repository-read time, but may remain unset if the source was a stream
 file. The argument tab-completes using the list of supported systems.
 
-The source type affects the interpretation of legacy IDs (for
-purposes of the =N visibility set and the 'references' command) by
-controlling the regular expressions used to recognize them. If no
-preferred output type has been set, it may also change the output
-format of stream files made from the repository.
+The source type affects the recognition of legacy IDs by the the =N
+visibility selector by controlling the regular expressions used to
+recognize them. If no preferred output type has been set, it may also
+control the output format of stream files made from the repository.
 
 The source type is reliably set whenever a live repository is read, or
 when a Subversion stream or Fossil dump is interpreted - but not
-necessarily by other stream files. Streams generated by
-cvs-fast-export(1) using the "--reposurgeon" option are detected as CVS. In
-some other cases, the source system is detected from the presence of
-magic $-headers in contents blobs.
+necessarily by other stream files. Here's how reposurgeon gathers 
+hints from stream files:
+
+1. Streams generated by cvs-fast-export(1) using the "--reposurgeon"
+option are detected as CVS (or perhaps RCS). This is considered a
+strong hint.
+
+2. File basenames that match those used by known version-control
+systems for storing ignore patterns - e.g. .gitignore indicating Git,
+.hgignore indicating Mercurial, etc. - are considered weak hints.
+
+3. Certain magic $-headers in content blobs are considered 
+weak hints. These are associated with SCCS, RCS, and CVS.
+
+The sourcetype in a stream not frpom a live repository is set by the
+first strong hint or the last weak hint, Reposurgeon will issue
+warnings in the event it sees multiple conflicting strong hints.
 `)
 }
 
