@@ -17,6 +17,7 @@ Repository head::
      repotool initialize becomes repotool makemake.
      Tested support for reading darcs repositories.
      The ignores command sets Q bits
+     Source types of stream dumps ca be deduced from ignore file names.
 
 4.38: 2023-06-14::
      Experimental Perforce (p4) mirroring support in repotool.
